# ProjectTemplate

./: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  test_file.cpp
